--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,21 @@
 {
-    "builds": [{
-        "src": "movieaisite/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    }],
+    "builds": [
+        {
+            "src": "movieaisite/wsgi.py",
+            "use": "@vercel/python",
+            "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+        },
+        {
+            "src": "requirements.txt",
+            "use": "@vercel/static-build",
+            "config": { "distDir": "staticfiles" }
+        }
+    ],
     "routes": [
+        {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+        },
         {
             "src": "/(.*)",
             "dest": "movieaisite/wsgi.py"
