--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
             "use": "@vercel/python",
             "config": { 
                 "maxLambdaSize": "250mb",
-                "runtime": "python3.9"
+                "runtime": "python3.12"
             }
         }
     ],
@@ -18,5 +18,6 @@
             "src": "/(.*)",
             "dest": "movieaisite/wsgi.py"
         }
-    ]
+    ],
+    "buildCommand": "pip install -r requirements.txt"
 }
